# datasette-plugin-router

./: Justfile  pyproject.toml
datasette_plugin_router/: __init__.py
sample/: .gitignore  Makefile  openapi-ts.config.ts  plugin.py  script.ts
tests/: test_plugin_router.py
tests/__snapshots__/: test_plugin_router.ambr
